--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.1.0",
+    "@mui/x-charts": "^8.4.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -12,6 +16,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.8",
     "react-dom": "^17.0.2",
+    "react-gauge-component": "^1.2.64",
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "^4.0.3",
