--- a/package.json
+++ b/package.json
@@ -48,6 +48,10 @@
     ]
   },
   "devDependencies": {
+    "@eslint/js": "^9.27.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.2.0",
     "msw": "^0.35.0"
   },
   "engines": {
